Need to run apt-get update before downloading the postgresql server dev package

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
 language: ruby
 before_install:
-  - sudo apt-get install -qq postgresql-server-dev-9.3
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq postgresql-server-dev-all
